<resources>
    <string name="app_name">tema2</string>
    <string name="tv_medical_app">Medical app</string>
    <string name="lista_rezultate">Lista rezultate</string>
    <string name="app_image">app image</string>
    <string name="person_image">person_image</string>
    <string name="result">Result</string>
    <string name="pacient_name">Pacient Name</string>
    <string name="company">Company</string>
    <string name="type">Type</string>
    <string name="medical_center">Medical Center</string>
    <string name="patient_name">Patient Name</string>
    <string name="empty">-</string>
    <string name="covid_tests_list">Covid tests list:</string>
    <string name="hospital_picture">hospital_picture</string>
    <string name="lista_centre_medicale">LISTA CENTRE MEDICALE</string>
    <string name="medical_center_image">Medical center image</string>
    <string name="mc_name">Name</string>
    <string name="location">Location</string>
    <string name="number_of_tests">Number of tests</string>
    <string name="number_of_employees">Number of employees</string>
    <string name="contact_number">Contact number</string>
    <string name="add">ADD</string>
    <string name="name">Name:</string>
    <string name="name_tiet">Name</string>
    <string name="location_tiet">Location:</string>
    <string name="location_tv">Location</string>
    <string name="number_of_tests_tv">Number of tests</string>
    <string name="number_of_tests_tvv">Number of tests:</string>
    <string name="number_tests_tiet">Number tests:</string>
    <string name="number_of_employees_tv">Number of employees:</string>
    <string name="number_of_employees_tiet">Number of employees:</string>
    <string name="contact_number_tiet">Contact number</string>
    <string name="contact_number_tv">Contact number:</string>
    <string name="add_in_list">Add in list</string>
    <string name="name_tiet_val">Name has to have at least 3 characters.</string>
    <string name="location_tiet_val">Location has to have at least 3 characters.</string>
    <string name="nrtests_tiet_val">Number of tests needs to be greater than 0</string>
    <string name="nremployees_tiet_val">Number needs to be greater than 10.</string>
    <string name="contact_tiet_val">Number has to have 10 digits.</string>
    <string name="graph">graph</string>
    <string name="graph_legend">%1$s - %2$d</string>
</resources>