<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_cyan"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/sandu_cristina_alexandra_mc_adapter_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_healing_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_mc_tv_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/medical_center_image"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_mc_tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_mc_adapter_img"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_mc_tv_location"
        android:text="@string/mc_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/mcdapter"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_mc_tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_mc_tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/location"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/mcdapter"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_mc_tv_nr_tests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_mc_adapter_img"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/number_of_tests"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/mcdapter"
        />
    <ImageView
        android:id="@+id/sandu_cristina_alexandra_mc_adapter_employees_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_mc_tv_nr_tests"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_mc_adapter_img"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_mc_tv_nr_employees"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/person_image"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_mc_tv_nr_employees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_mc_adapter_employees_img"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_mc_adapter_img"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_mc_tv_contact_number"
        android:text="@string/number_of_employees"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/mcdapter"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_mc_tv_contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_mc_adapter_img"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_mc_tv_nr_employees"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/contact_number"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/mcdapter"
        />
</androidx.constraintlayout.widget.ConstraintLayout>