<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/babypurple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/sandu_cristina_alexandra_tadapter_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_tadapter_pacient_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/person_image"
        />
    <TextView
        android:id="@+id/sandu_cristina_alexandra_tadapter_pacient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_tadapter_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_tadapter_result"
        android:text="@string/patient_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        style="@style/testadapter"
        />
    <TextView
        android:id="@+id/sandu_cristina_alexandra_tadapter_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_tadapter_pacient_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/result"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        style="@style/testadapter"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_tadapter_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_tadapter_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_tadapter_type"
        android:text="@string/company"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        style="@style/testadapter"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_tadapter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sandu_cristina_alexandra_tadapter_company"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_tadapter_result"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/type"
        android:layout_marginTop="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        style="@style/testadapter"
        />

    <ImageView
        android:id="@+id/sandu_cristina_alexandra_tadapter_medical_center_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_local_hospital_24"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_tadapter_company"
        app:layout_constraintEnd_toStartOf="@id/sandu_cristina_alexandra_tadapter_medical_center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/hospital_picture"
        />

    <TextView
        android:id="@+id/sandu_cristina_alexandra_tadapter_medical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_tadapter_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/medical_center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="15dp"
        style="@style/testadapter"
        />

</androidx.constraintlayout.widget.ConstraintLayout>