<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_medical_centers"
    tools:context=".AddCentersActivity">

    <TextView
        android:id="@+id/sandu_cristina_alexandra_add_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sandu_cristina_alexandra_add_til_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        style="@style/mcdapter"
        android:textSize="14sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sandu_cristina_alexandra_add_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@color/light_pink"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sandu_cristina_alexandra_add_tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_tiet"
            android:typeface="serif"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sandu_cristina_alexandra_add_tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_til_name"
        app:layout_constraintBottom_toTopOf="@id/sandu_cristina_alexandra_add_til_location"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/location_tiet"
        style="@style/mcdapter"
        android:textSize="14sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sandu_cristina_alexandra_add_til_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_tv_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@color/light_pink"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sandu_cristina_alexandra_add_tiet_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_tv"
            android:typeface="serif"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sandu_cristina_alexandra_add_tv_number_tests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_til_location"
        app:layout_constraintBottom_toTopOf="@id/sandu_cristina_alexandra_add_til_number_tests"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/number_of_tests_tvv"
        style="@style/mcdapter"
        android:textSize="14sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sandu_cristina_alexandra_add_til_number_tests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_tv_number_tests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@color/light_pink"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sandu_cristina_alexandra_add_tiet_number_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_tests_tiet"
            android:typeface="serif"
            android:textStyle="bold"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sandu_cristina_alexandra_add_tv_number_employees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_til_number_tests"
        app:layout_constraintBottom_toTopOf="@id/sandu_cristina_alexandra_add_til_number_employees"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/number_of_employees_tv"
        style="@style/mcdapter"
        android:textSize="14sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sandu_cristina_alexandra_add_til_number_employees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_tv_number_employees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@color/light_pink"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sandu_cristina_alexandra_add_tiet_number_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_employees_tiet"
            android:typeface="serif"
            android:textStyle="bold"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sandu_cristina_alexandra_add_tv_contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_til_number_employees"
        app:layout_constraintBottom_toTopOf="@id/sandu_cristina_alexandra_add_til_contact_number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_number_tv"
        style="@style/mcdapter"
        android:textSize="14sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sandu_cristina_alexandra_add_til_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp"
        app:layout_constraintTop_toBottomOf="@id/sandu_cristina_alexandra_add_tv_contact_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@color/light_pink"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sandu_cristina_alexandra_add_tiet_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number_tiet"
            android:typeface="serif"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sandu_cristina_alexandra_add_center_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_in_list"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="serif"
        android:background="@drawable/button_rounded_corners"
        android:backgroundTint="@color/light_purple"
        android:layout_marginBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>