<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background"
    >

   <ImageView
       android:id="@+id/sandu_cristina_alexandra_main_app_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/medical_app"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="32dp"
       android:contentDescription="@string/app_image"
       />


    <Button
        android:id="@+id/sandu_cristina_alexandra_main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:backgroundTint="@color/light_purple"
        android:text="@string/lista_rezultate"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@id/sandu_cristina_alexandra_main_btn_lista_centre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/sandu_cristina_alexandra_main_btn_lista_centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rounded_corners"
        android:backgroundTint="@color/light_purple"
        android:text="@string/lista_centre_medicale"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>